test/langtools/tools/javac/valhalla/lworld-values/CheckFlattenableCycles.out
CheckFlattenableCycles.java:13:52: compiler.err.cyclic.value.type.membership: CheckFlattenableCycles.InnerValue
CheckFlattenableCycles.java:15:48: compiler.err.cyclic.value.type.membership: CheckFlattenableCycles
CheckFlattenableCycles.java:19:36: compiler.err.cyclic.value.type.membership: CheckFlattenableCycles
3 errors
